# Comfyui-Caption-Live

./: .gitignore  Kappa caption animation.json  README.md  __init__.py  build_log.txt  caption_engine_py.cp312-win_amd64.pyd  caption_engine_py.pyd  caption_engine_py.pyd.old  caption_engine_unified.cp312-win_amd64.pyd.old2  caption_engine_unified.pyd.old2  caption_engine_unified.pyd.old3  caption_live.py  index.html  install.py  nih.txt  pyproject.toml  rust_caption.pyd  rust_caption.pyd.old  rust_caption.pyd.old2  rust_caption.pyd.trash  rust_caption_old.pyd  rust_caption_old_v2.pyd  rust_caption_old_v3.pyd  rust_caption_old_v4.pyd  rust_caption_old_v5.pyd  rust_caption_old_v6.pyd  rust_caption_v2.pyd  rust_caption_v2.pyd.old  rust_caption_v2.pyd.old2  rust_caption_v2.pyd.old3  rust_caption_v2.pyd.old4  rust_caption_v2.pyd.old8  test_import.py  whisperx-raw-test.json
.github/workflows/: build.yml
caption_core/: Cargo.toml  output.txt
caption_core/src/: gpu.rs  lib.rs
core/: CMakeLists.txt  build_errors.txt  build_log.txt  build_log2.txt  build_log3.txt  build_log4.txt  build_log_final.txt  build_native.ps1  build_no_skia.txt  build_output.txt  build_py2.txt  build_python.ps1  build_python.txt  build_verbose.txt  build_wasm.ps1  caption_build2.txt  caption_build3.txt  caption_build4.txt  cmake_output.txt  package.json  skia_build.txt  skia_build2.txt  test.js  test.wasm  test_engine.py  test_template.cpp
core/build-wasm/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
core/docs/: ARCHITECTURE.md  WASM_BUILD.md
core/include/compute/: compiler.hpp  cuda.hpp  kernel_compiler.hpp  kernels.hpp  sycl.hpp  types.hpp  unified_backend.hpp  vulkan.hpp  webgpu.hpp
core/include/core/: color.hpp  deterministic.hpp  effects.hpp  embedded_font.hpp  frame_validator.hpp  math.hpp  rendering_engine.hpp
core/include/cuda/: cuda_kernels.hpp
core/include/engine/: engine.hpp  render_pipeline.hpp  renderer.hpp  template.hpp
core/include/gpu/: backend.hpp  cuda_backend.hpp  dx12_backend.hpp  vulkan_backend.hpp  webgpu_backend.hpp
core/include/graphics/: api.hpp  backend.hpp  framebuffer.hpp  shader.hpp  texture.hpp
core/include/platform/: emscripten.hpp  platform.hpp  pybind.hpp
core/include/testing/: consistency_test.hpp
core/include/text/: sdf_generator.hpp  sdf_text_renderer.hpp  types.hpp
core/lib/: caption.d.ts  caption.js
core/shaders/: distortion.glsl  particles.glsl  text.glsl
core/shaders/source/: composite.wgsl  text.wgsl
core/src/: engine.cpp  render_pipeline.cpp  renderer.cpp  template.cpp  text_renderer.cpp
core/src/backends/: cpu_backend.cpp  cuda_compute_adapter.cpp  gpu_stubs.cpp  webgpu_backend.cpp
core/src/bindings/: python_bindings.cpp  unified_bindings.cpp  wasm_bindings.cpp
core/src/compute/: compiler.cpp  cuda_backend.cpp  unified_backend.cpp
core/src/core/: deterministic.cpp  effect_compiler.cpp  frame_validator.cpp  template_parser.cpp
core/src/cuda/: effect_kernels.cu
core/src/effects/: distortions.cpp  particles.cpp  text.cpp  transitions.cpp
core/src/gpu/: cuda_backend.cu  dx12_backend.cpp  vulkan_backend.cpp  webgpu_backend.cpp
core/src/graphics/: metal_backend.mm  vulkan_backend.cpp
core/src/platform/: emscripten.cpp  python.cpp
core/src/shaders/: basic.wgsl  rain.wgsl
core/src/tests/: consistency_test.cpp  consistency_test_main.cpp  rain_test.cpp
core/src/text/: sdf_generator.cpp  sdf_text_renderer.cpp  skia_text_renderer.cpp
core/tests/: CMakeLists.txt
core/tests/golden/: reference.json
core/tests/web/: consistency_test.html
core/web/wasm/: caption_engine_wasm.js
js/: caption_live.css  caption_live.js  layout.js  renderer.js  ui.js
js/templates/: box.js  colored.js  scaling.js
lib/caption_engine/: __init__.py
rust_caption/: Cargo.toml  pyproject.toml
rust_caption/src/: lib.rs
rust_caption_src/: Cargo.toml
rust_caption_src/src/: lib.rs
rust_caption_wasm/: Cargo.toml  output.txt
rust_caption_wasm/src/: lib.rs
templates/: box_highlight_caption.json  standard_test.json
templates/captions/: bouncing.json  neon.json  typewriter.json
templates/transitions/: dissolve.json  glitch.json
web/: aspect-ratio.js  caption_live.js  color-widget.js  cpp-engine.js  index.js  layout.js  preview-optimizer.js  renderer.js  safe-area-overlay.js  test_wasm.html  ui.js  virtual-camera.js
web/editor/: editor.js  index.html  styles.css
web/wasm/: caption_engine_wasm.js  caption_engine_wasm.wasm
