[package]
name = "caption_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:glyphon", "dep:bytemuck"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wgpu = { version = "0.19", optional = true }
glyphon = { version = "0.5", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
futures = "0.3"
