[package]
name = "rust_caption"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_caption"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
caption_core = { path = "../caption_core" }
