[package]
name = "rust_caption"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_caption"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py37"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
resvg = "0.36"
usvg = "0.36"
tiny-skia = "0.11"
caption_core = { path = "../caption_core", features = ["gpu"] }
rusttype = "0.9"
wgpu = "0.19"
pollster = "0.3"

[features]
default = ["gpu"]
gpu = []
