[package]
name = "caption-live-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
caption_core = { path = "../caption_core" }

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "TextMetrics",
    "console",
]

[profile.release]
opt-level = "z"
